--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,15 @@
   color: #61dafb;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type="number"] {
+    -moz-appearance:textfield;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
